# waybar_battery_indicator

./: Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs  pango_markup.rs
