[package]
name = "swaybar_server"
version = "0.1.0"
authors = ["Arvinder Dhanoa <awsomearvinder@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "waybar_server_logic"
path = "src/lib.rs"

[[bin]]
name= "waybar_server"
path= "src/bin/main.rs"

[dependencies]
serde = { version = "1.0.103", features = ["derive"] }
derive_builder = "0.9.0"
serde_json = "1.0.42"
arraydeque = "0.4.5"
